--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-google-docs-viewer": "^1.0.1",
+    "react-player": "^1.6.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
